--- a/css/style.css
+++ b/css/style.css
@@ -8284,7 +8284,7 @@ h1, h2, h3, h4, h5,
 
 .slider-text .bread {
   font-weight: 700 !important; 
-  font-size: 100px
+  font-size: 100px;
   font-family: sans-serif;}
 
 .mouse {
